force-app/main/default/objects/Form_Submission__c/Form_Submission__c.object-meta.xml
<CustomObject>
    <description>Stores form submissions from end users</description>
    <label>Form Submission</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>