force-app/main/default/objects/Form_Submission__c/fields/Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The form definition that this submission belongs to</description>
    <inlineHelpText>The form that was submitted</inlineHelpText>
    <label>Form Definition</label>
    <referenceTo>Form_Definition__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>