force-app/main/default/objects/Form_Submission__c/fields/Submission_Data__c.field-meta.xml
<CustomField>
    <fullName>Submission_Data__c</fullName>
    <description>JSON data containing the form submission values</description>
    <inlineHelpText>The submitted form data in JSON format</inlineHelpText>
    <label>Submission Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>