force-app/main/default/objects/Form_Submission__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>The date and time when the form was submitted</description>
    <inlineHelpText>When the form was submitted</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>